clientVerseGit/force-app/main/default/objects/List_Change__c/List_Change__c.object-meta.xml
<CustomObject>
    <label>List Change</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>List Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>