clientVerseGit/force-app/main/default/objects/List_Change__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <label>Changes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>