clientVerseGit/force-app/main/default/objects/List_Change__c/fields/Proposed_At__c.field-meta.xml
<CustomField>
    <fullName>Proposed_At__c</fullName>
    <label>Proposed At</label>
    <type>DateTime</type>
</CustomField>