clientVerseGit/force-app/main/default/objects/List_Change__c/fields/Proposed_By__c.field-meta.xml
<CustomField>
    <fullName>Proposed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>List_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>