clientVerseGit/force-app/main/default/objects/List_Change__c/fields/View_Share_Config__c.field-meta.xml
<CustomField>
    <fullName>View_Share_Config__c</fullName>
    <label>View Share Config</label>
    <referenceTo>View_Share_Config__c</referenceTo>
    <relationshipLabel>List Changes</relationshipLabel>
    <relationshipName>List_Changes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>